--- a/index.html
+++ b/index.html
@@ -3,121 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anti-Hate Gate</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <title>Hate Speech Reporter</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100 min-h-screen">
+<body>
     <!-- Header -->
-    <header class="bg-white shadow">
-        <div class="max-w-7xl mx-auto py-6 px-4">
-            <div class="flex justify-between items-center">
-                <h1 class="text-3xl font-bold text-gray-900">Anti-Hate Gate</h1>
-                <button id="loginBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+    <header class="header">
+        <div class="container">
+            <div class="header-content">
+                <h1>Hate Speech Reporter</h1>
+                <button id="loginBtn" class="btn btn-primary">
                     Login with Google
                 </button>
                 <div id="userInfo" class="hidden">
                     <span class="mr-4">Welcome, User</span>
-                    <button onclick="logout()" class="text-blue-500 hover:text-blue-700">Logout</button>
+                    <button onclick="logout()" class="btn btn-secondary">Logout</button>
                 </div>
             </div>
         </div>
     </header>
 
     <!-- Main Content -->
-    <main class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
-        <!-- Submission Form -->
-        <div id="submissionForm" class="hidden bg-white shadow rounded-lg p-6 mb-6">
-            <h2 class="text-2xl font-bold mb-6">Submit a Report</h2>
-            <form id="reportForm" class="space-y-6">
-                <div>
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Content Type</label>
-                    <div class="flex space-x-4">
-                        <button type="button" onclick="setContentType('link')" class="bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded">Link</button>
-                        <button type="button" onclick="setContentType('text')" class="bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded">Text</button>
-                        <button type="button" onclick="setContentType('screenshot')" class="bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded">Screenshot</button>
+    <main class="main-content">
+        <div class="container">
+            <!-- Submission Form -->
+            <div id="submissionForm" class="card hidden">
+                <h2>Submit a Report</h2>
+                <form id="reportForm">
+                    <div class="form-group">
+                        <label class="form-label">Content Type</label>
+                        <div class="btn-group">
+                            <button type="button" onclick="setContentType('link')" class="btn btn-secondary">Link</button>
+                            <button type="button" onclick="setContentType('text')" class="btn btn-secondary">Text</button>
+                            <button type="button" onclick="setContentType('screenshot')" class="btn btn-secondary">Screenshot</button>
+                        </div>
                     </div>
-                </div>
 
-                <div id="linkInput" class="hidden">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">URL</label>
-                    <input type="url" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                </div>
-
-                <div id="textInput" class="hidden">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Text Content</label>
-                    <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" rows="4"></textarea>
-                </div>
-
-                <div id="screenshotInput" class="hidden">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Upload Screenshot</label>
-                    <input type="file" accept="image/*" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                </div>
-
-                <div>
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Context/Notes</label>
-                    <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" rows="3"></textarea>
-                </div>
-
-                <div>
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Severity Rating (1-10)</label>
-                    <input type="range" min="1" max="10" value="5" class="w-full" oninput="this.nextElementSibling.value = this.value">
-                    <output class="text-gray-700">5</output>
-                </div>
-
-                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                    Submit Report
-                </button>
-            </form>
-        </div>
-
-        <!-- Analysis Status -->
-        <div id="analysisStatus" class="hidden bg-white shadow rounded-lg p-6 mb-6">
-            <h2 class="text-2xl font-bold mb-4">Analysis Status</h2>
-            <div class="space-y-4">
-                <div class="flex items-center">
-                    <div class="mr-4">
-                        <svg class="animate-spin h-5 w-5 text-blue-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                        </svg>
+                    <div id="linkInput" class="form-group hidden">
+                        <label class="form-label">URL</label>
+                        <input type="url" class="form-input">
                     </div>
+
+                    <div id="textInput" class="form-group hidden">
+                        <label class="form-label">Text Content</label>
+                        <textarea class="form-textarea" rows="4"></textarea>
+                    </div>
+
+                    <div id="screenshotInput" class="form-group hidden">
+                        <label class="form-label">Upload Screenshot</label>
+                        <input type="file" accept="image/*" class="form-input">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label">Context/Notes</label>
+                        <textarea class="form-textarea" rows="3"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label">Severity Rating (1-10)</label>
+                        <div class="flex align-center">
+                            <input type="range" min="1" max="10" value="5" class="form-input" 
+                                   oninput="this.nextElementSibling.value = this.value">
+                            <output class="ml-2">5</output>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Submit Report</button>
+                </form>
+            </div>
+
+            <!-- Analysis Status -->
+            <div id="analysisStatus" class="card hidden">
+                <h2>Analysis Status</h2>
+                <div class="flex align-center">
+                    <div class="spinner mr-4"></div>
                     <div>
-                        <p class="font-semibold">Analyzing content...</p>
-                        <p class="text-sm text-gray-500">This may take a few moments</p>
+                        <p class="mb-1">Analyzing content...</p>
+                        <p class="text-secondary">This may take a few moments</p>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Dashboard -->
-        <div id="dashboard" class="hidden bg-white shadow rounded-lg p-6">
-            <h2 class="text-2xl font-bold mb-6">Your Submissions</h2>
-            <div class="overflow-x-auto">
-                <table class="min-w-full table-auto">
-                    <thead class="bg-gray-50">
-                        <tr>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Date</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Type</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Rating</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">AI Analysis</th>
-                        </tr>
-                    </thead>
-                    <tbody class="bg-white divide-y divide-gray-200">
-                        <tr>
-                            <td class="px-6 py-4 whitespace-nowrap">2024-02-08</td>
-                            <td class="px-6 py-4 whitespace-nowrap">Link</td>
-                            <td class="px-6 py-4 whitespace-nowrap">8</td>
-                            <td class="px-6 py-4 whitespace-nowrap">
-                                <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
-                                    Complete
-                                </span>
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap">View Report</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <!-- Dashboard -->
+            <div id="dashboard" class="card hidden">
+                <h2>Your Submissions</h2>
+                <div class="table-container">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Type</th>
+                                <th>Rating</th>
+                                <th>Status</th>
+                                <th>AI Analysis</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>2024-02-08</td>
+                                <td>Link</td>
+                                <td>8</td>
+                                <td><span class="badge badge-success">Complete</span></td>
+                                <td>View Report</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </main>
